authenticated sign up and login

--- a/style.css
+++ b/style.css
@@ -1,14 +1,14 @@
 *{
-    font-family:   'Poppins', sans serif;
+    font-family: 'Poppins', sans serif;
 }
-/*login */
+
+/* Login and Sign-up Forms */
 body{
     background-image: url("bank_background.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
     background-attachment: fixed;
-
 }
 
 .box{
@@ -17,6 +17,7 @@ body{
     align-items: center;
     min-height: 90vh;
 }
+
 .row:after {
     content: "";
     display: table;
@@ -30,25 +31,27 @@ body{
     padding: 0 15px 0 15px;
 }
 
-span{
-    color: #fff;
-    font-size: small;
-    display: flex;
-    justify-content: center;
-    padding: 10px 0 10px 0;
-}
-header{
+.top-header{
     color: #fff;
     font-size: 30px;
     display: flex;
     justify-content: center;
     padding: 10px 0 10px 0;
 }
+
+.top-header span{
+    color: #fff;
+    font-size: small;
+    display: flex;
+    justify-content: center;
+    padding: 10px 0 10px 0;
+}
+
 .input-field{
     display: flex;
     flex-direction: column;
-
 }
+
 .input{
     height: 45px;
     width: 87%;
@@ -58,17 +61,19 @@ header{
     color: #fff;
     padding: 0 0 0 45px;
     background: rgba(255,255,255,0.1);
-
 }
+
 i{
     position: relative;
     top: -31px;
     left: 17px;
     color: #fff;
 }
+
 ::-webkit-input-placeholder{
     color: #fff; 
 }
+
 .submit{
     border: none;
     border-radius: 30px;
@@ -80,10 +85,12 @@ i{
     cursor: pointer;
     transition: .3s; 
 }
+
 .submit:hover{
     box-shadow: 1px 5px 7px 1px rgba(255,255,255,0.2);
-
+    color: #000;
 }
+
 .bottom{
     display: flex;
     flex-direction: row;
@@ -92,8 +99,8 @@ i{
     color: #fff;
     margin-top: 10px;
 }
-.left{
 
+.left{
     display: flex;
 }
 
@@ -102,3 +109,43 @@ label a{
     text-decoration: none;
 }
 
+/* Toggle Button */
+.bottom button{
+    background: none;
+    border: none;
+    color: #fff;
+    font-size: small;
+    cursor: pointer;
+    text-decoration: underline;
+}
+
+.bottom button:focus{
+    outline: none;
+}
+
+/* Sign-up Form Styles */
+#signup-form {
+    display: none;
+}
+
+#signup-form .input {
+    margin-bottom: 10px;
+}
+
+#signup-form input[type="submit"] {
+    margin-top: 20px;
+    background: rgba(255,255,255,0.7);
+    color: #000;
+    border: none;
+    border-radius: 30px;
+    font-size: 15px;
+    height: 45px;
+    outline: none;
+    cursor: pointer;
+    transition: .3s;
+}
+
+#signup-form input[type="submit"]:hover {
+    box-shadow: 1px 5px 7px 1px rgba(255,255,255,0.2);
+    color: #000;
+}
